--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+W<link rel="stylesheet" type="text/css" href="C:\Users\ANDRÉ GARCIA BRITO\Desktop\Versionamento\cadastro de pessoas\styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
