modificando html e adicionando imagem

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@ W<link rel="stylesheet" type="text/css" href="C:\Users\ANDRÉ GARCIA BRITO\Deskt
     <title>Document</title>
 </head>
 <body>
-    
+    <fomr>
+        <p>Nome</p>
+        <input type="text">
+        <p>Idade</p>
+        <input type="number">
+    </fomr>
+    <img src="image">
 </body>
 </html>
