--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-W<link rel="stylesheet" type="text/css" href="C:\Users\ANDRÉ GARCIA BRITO\Desktop\Versionamento\cadastro de pessoas\styles.css">
+<link rel="stylesheet" type="text/css" href="C:\Users\ANDRÉ GARCIA BRITO\Desktop\Versionamento\cadastro de pessoas\styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -12,7 +12,7 @@ W<link rel="stylesheet" type="text/css" href="C:\Users\ANDRÉ GARCIA BRITO\Deskt
         <input type="text">
         <p>Idade</p>
         <input type="number">
-    </fomr>
-    <img src="image">
+    </fomr><br>
+    <img src="image.png">
 </body>
 </html>
